[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/TGameEnd.gd" type="Script" id=1]
[ext_resource path="res://pics/ending.png" type="Texture" id=2]
[ext_resource path="res://pics/vick.png" type="Texture" id=3]
[ext_resource path="res://effects/FaderArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://pics/fader1.png" type="Texture" id=5]
[ext_resource path="res://fonts/BitmapText.tscn" type="PackedScene" id=6]
[ext_resource path="res://effects/FireWorks.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D/vick:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D/vick:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D/vick:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3, 2, 1, 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( -22.0486, -36.8527, 22.0486, 36.8527, 8, 107, -29.2932, -5.98463, 29.2932, 5.98463, 82, 125, -33.7029, 12.9142, 33.7029, -12.9142, 140, 150, -9.13443, -22.0486, 9.13443, 22.0486, 200, 160, 0, 0, 0, 0, 270, 170 )
}

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float cut:hint_range(0.0, 1.0) = 0.0;
uniform vec4 acolor:hint_color;

void fragment()
{
	float tone = texture(TEXTURE,UV).r;
	if (cut>=1.0 || tone<cut-0.1)
		tone=1.0;
	else if (tone<cut)
		tone=0.5;
	else 
		tone=0.0;
	COLOR = vec4(acolor.r,acolor.g,acolor.b,tone);
}"

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/cut = 1.0
shader_param/acolor = Color( 0, 0, 0, 1 )

[node name="TGameEnd" type="Node2D"]
script = ExtResource( 1 )

[node name="VickAnimator" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 1 )
anims/stop = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="PathAnimator" type="AnimationPlayer" parent="."]
anims/move = SubResource( 4 )

[node name="Textos" type="Node2D" parent="."]
visible = false

[node name="FireWorks" parent="Textos" instance=ExtResource( 7 )]
margin_right = 320.0
margin_bottom = 110.0

[node name="t1" parent="Textos" instance=ExtResource( 6 )]
position = Vector2( 235, 39 )
text = "CONGRATULATIONS"
textalign = 4
waves = 2.0
wavesize = 1.0
wavespeed = 75.921
animatewaves = true

[node name="t2" parent="Textos" instance=ExtResource( 6 )]
position = Vector2( 235, 54 )
text = "YOU HAVE DEFEATED"
textalign = 4
waves = 2.0
wavesize = 1.0
wavespeed = 75.921
animatewaves = true

[node name="t3" parent="Textos" instance=ExtResource( 6 )]
position = Vector2( 235, 69 )
text = "THE MUMMIES"
textalign = 4
waves = 2.0
wavesize = 1.0
wavespeed = 75.921
animatewaves = true

[node name="ending" type="Sprite" parent="."]
position = Vector2( 160, 120 )
texture = ExtResource( 2 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 3, 0 )
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 8, 107 )
rotation = 1.00622
rotate = false

[node name="vick" type="Sprite" parent="Path2D/PathFollow2D"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( -9.29295, -5.88567 )
rotation = -1.00622
texture = ExtResource( 3 )
hframes = 25
frame = 1

[node name="Fader" parent="." instance=ExtResource( 4 )]
material = SubResource( 7 )
position = Vector2( 160, 120 )
scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 5 )
